--- a/.github/workflows/Redmi-AX6000-padavanonly.yml
+++ b/.github/workflows/Redmi-AX6000-padavanonly.yml
@@ -29,6 +29,7 @@ env:
   DIY_P1_SH: padavanonly/Redmi-AX6000/diy-part1.sh
   DIY_P2_SH: padavanonly/Redmi-AX6000/diy-part2.sh
   SSH_ACTIONS: false
+  UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
@@ -133,6 +134,13 @@ jobs:
       with:
         name: ${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}
         path: ${{ env.FIRMWARE }}
+
+    - name: 上传bin到github
+      uses: actions/upload-artifact@main
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      with:
+        name: ${{ env.FILE_DATE }}-OpenWrt_bin-${{ env.DEVICE_NAME }}
+        path: openwrt/bin
 
     - name: 生成release标签
       id: tag
