--- a/.github/workflows/Redmi-AX6000-hanwckf.yml
+++ b/.github/workflows/Redmi-AX6000-hanwckf.yml
@@ -29,7 +29,8 @@ env:
   DIY_P1_SH: hanwckf/Redmi-AX6000/diy-part1.sh
   DIY_P2_SH: hanwckf/Redmi-AX6000/diy-part2.sh
   SSH_ACTIONS: false
-  UPLOAD_FIRMWARE: true
+  UPLOAD_BIN_DIR: true
+  UPLOAD_FIRMWARE: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
   ###############改名字##############
@@ -115,15 +116,22 @@ jobs:
     - name: 查看磁盘使用情况
       if: (!cancelled())
       run: df -hT
-
+      
+    - name: 上传bin到github
+      uses: actions/upload-artifact@main
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      with:
+        name: ${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}-BIN
+        path: openwrt/bin
+        
     - name: 整理文件并重命名
       id: organize
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: | 
         cd openwrt/bin/targets/*/*
         rm -rf packages
-        sudo -E apt-get -qq install rename
-        rename 's/.*${{ env.TARGET_NAME }}/${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}/' *
+#        sudo -E apt-get -qq install rename
+#        rename 's/.*${{ env.TARGET_NAME }}/${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}/' *
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
       
